<resources>
    <string name="app_name">BooleanCatastrophe</string>
    <string name="top_app_bar_title">Boolean Catastrophe</string>
    <string name="top_app_bar_search">Search</string>
    <string name="top_app_bar_userprofile">User Profile</string>
    <string name="cd_top_app_bar_search">Top app bar button to search</string>
    <string name="cd_top_app_bar_userprofile">Top app bar button to access user profile</string>
    <string name="top_app_bar_more">More</string>
    <string name="cd_top_app_bar_more">More options menu button on the top app bar</string>
    <string name="cd_userprofile_image">An image indicating this is the user profile activity</string>
    <string name="lbl_user_name">Username:</string>
    <string name="lbl_user_email">Email:</string>
    <string name="btn_save_profile">Save Profile</string>
    <string name="btn_new_trial">New Trial</string>
    <string name="lbl_result">Result: </string>
    <string name="trial_type">TYPE</string>
    <string name="lbl_tab_home">Home</string>
    <string name="lbl_tab_owned">Owned Experiments</string>
    <string name="lbl_tab_subscribed">Subscribed Experiments</string>
    <string name="lbl_tab_active">Active Experiments</string>
    <string name="lbl_tab_ended">Ended Experiments</string>
    <string name="cd_tabs">Tabs displaying various experiment lists and options for user action</string>
    <string name="cd_tab_home">Tab for main user action options</string>
    <string name="cd_tab_owned_experiments">Tab for experiments owned by the user</string>
    <string name="cd_tab_subscribed_experiments">Tab for experiments the user is subscribed to</string>
    <string name="cd_tab_active_experiments">Tab for experiments that are open and can be participated in by the user</string>
    <string name="cd_tab_ended_experiments">Tab for experiments that have been ended</string>
    <string name="btn_add_experiment">Floating button to add new experiment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_item_image">Images for experiments in recycler view list</string>
    <string name="TEMP">Multitude of user options will be coming here soon; some redundancies and shortcuts that can also be reached from other UI flows within the app</string>
    <string name="hint_pub_exp_description">Add a description for the new experiment</string>
    <string name="rad_binomial">Binomial</string>
    <string name="rad_binomial_tooltip">Set up as a binomial experiment (pass or fail trial type)</string>
    <string name="rad_count">Count</string>
    <string name="rad_count_tooltip">Set up as a count experiment (how many did you see trial type)</string>
    <string name="rad_measurement">Measurement</string>
    <string name="rad_measurement_tooltip">Set up as a measurement experiment (different scales trial type)</string>
    <string name="rad_nonnegcount">Non-Negative Count</string>
    <string name="rad_nonnegcount_tooltip">Set up as a non-negative integer count experiment (zero or more trial type)</string>
    <string name="lbl_pub_exp_min">Minimum Trials:</string>
    <string name="pub_exp_min_default_value">0</string>
    <string name="top_app_bar_title_generate_qr_code">Generate QR Code</string>
    <string name="top_app_bar_share">Share</string>
    <string name="cd_top_app_bar_share">Top app bar button to share</string>
    <string name="btn_print">Print</string>
    <string name="btn_generate_qr">Generate QR</string>
    <string name="btn_register_barcode">Register Barcode</string>
    <string name="tv_forum_questions">Experiment Question Forum</string>
    <string name="btn_add_question">Post New Question</string>
    <string name="cd_forum_question">Image for forum questions</string>
    <string name="lbl_forum_question_num_replies">Replies</string>
    <string name="btn_experiment_forum">View Experiment Forum</string>
    <string name="hint_new_question">Enter your question regarding this experiment...</string>
    <string name="tv_forum_replies">Question Replies Forum</string>
    <string name="btn_add_reply">Add Reply</string>
    <string name="cd_forum_reply">Image for the forum replies</string>
    <string name="hint_new_reply">Enter your reply to this question...</string>
    <string name="btn_experiment_statistics">View Experiment Statistics</string>
    <string name="btn_unpublish_exp">Unpublish Experiment</string>
    <string name="hint_pub_exp_region">Enter a region for this experiment...</string>
    <string name="btn_end_experiment">End Experiment</string>
    <string name="btn_experiment_subscribe">Subscribe</string>
    <string name="btn_home_addexperiment">Add New Experiment</string>
    <string name="btn_home_viewprofile">View Your Profile</string>
    <string name="btn_home_search">Search For Experiments or Users</string>
    <string name="btn_home_scan_qr">Scan QR Code</string>
    <string name="btn_home_scan_barcode">Scan Barcode</string>
    <string name="lbl_pub_exp_location_req">Location Required</string>
    <string name="tv_search_experiment">Search For Experiment:</string>
    <string name="tv_search_user">"Search for User:      "</string>
    <string name="hint_search_experiment">Search for experiment...</string>
    <string name="hint_search_for_user">Search for user...</string>
    <string name="btn_search_experiment">Search Experiments</string>
    <string name="btn_search_user">Search Users</string>
    <string name="btn_experiment_map">View Map</string>
</resources>