<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Used https://jam-icons.com/ for completely open source icons and
    https://material.io/components/app-bars-top/android#regular-top-app-bar for implementation help
     -->

    <item
        android:id="@+id/top_app_bar_search"
        android:contentDescription="@string/cd_top_app_bar_search"
        android:icon="@drawable/ic_top_app_bar_search"
        android:title="@string/top_app_bar_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/top_app_bar_userprofile"
        android:icon="@drawable/ic_top_app_bar_userprofile"
        android:title="@string/top_app_bar_userprofile"
        android:contentDescription="@string/cd_top_app_bar_userprofile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/top_app_bar_more"
        android:title="@string/top_app_bar_more"
        android:contentDescription="@string/cd_top_app_bar_more"
        app:showAsAction="never" />
    <item
        android:id="@+id/top_app_bar_scan_qr"
        android:title="Scan QR code" />
    <item
        android:id="@+id/top_app_bar_scan_barcode"
        android:title="Scan barcode" />

</menu>