<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabHomeFragment">


    <Button
        android:id="@+id/btn_home_addexperiment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/btn_home_addexperiment"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_viewprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_home_viewprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_viewprofile"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_addexperiment" />

    <Button
        android:id="@+id/btn_home_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_search"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_scan_qr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_viewprofile" />

    <Button
        android:id="@+id/btn_home_scan_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_scan_qr"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_scan_barcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_search" />

    <Button
        android:id="@+id/btn_home_scan_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/btn_home_scan_barcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_scan_qr" />

</androidx.constraintlayout.widget.ConstraintLayout>